# classic-snake-ai

./: .gitignore  README.md  apple.py  field.py  genetic_algorithm.py  main.py  neural_network.py  pyproject.toml  requirements.txt  settings.py  snake.py
